# bevy-3d-template

./: Cargo.toml  README.md  README.md.template  cargo-generate.toml  post-generate.rhai
assets/: game_parameters.toml  game_parameters.yaml
src/: dev_utils.rs  game_parameters.rs  main.rs
src/game/: components.rs  data_enums.rs  data_structs.rs  events.rs  mod.rs  plugin.rs  resources.rs  startups.rs  states.rs  updates.rs
